wwwroot/css/site.css
html,
head,
body {
    height: 100%;
    width: 100%;
    background-color: #eeeeee;
}

#threadList .ui {
    background-color: #eeeeee;
}

.hidden.menu,
.hidden {
    display: none !important;
}

#mainContent,
#threadList,
#thread {
    padding-top: 53px !important;
}

.divider-column {
    position: relative !important;
    padding: 0 !important;
}

.grid {
    position: relative !important;
}

.pusher {
    width: calc(100% - 350px);
}

#thread {
    padding: 20px;
}

#thread .comment:focus {
    background-color: #E5FFEB;
}

#thread .comments:empty {
    display: none !important;
}

#thread .comment .comments {
    padding: 5px 0 5px 10px;
    margin: 0;
    border: 0;
    border-image-width: 0;
    box-shadow: none;
}

#thread .comment {
    padding: 10px 10px 0 10px;
}

.truncate {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

#thread .comment {
    border: 1px solid rgba(0, 0, 0, 0.1);
    border-radius: 0.25em;
    box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.1);
}


/*
.ui.comments .comment .comments .comment {
  border: 1px solid rgba(0, 0, 0, 0.1);
  box-shadow: none;
}
*/


/****** Comments *********/

#thread .unread {
    background-color: #AFDCEC;
}

